--- a/fugax/usuario/Templates/registration/login.html
+++ b/fugax/usuario/Templates/registration/login.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head lang="es">
 	<title>FUGAX</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<meta charset="utf-8">
 </head>
