Creacion de modelos: Tags, Usuario y solo.

--- a/fugax/usuario/Templates/registration/login.html
+++ b/fugax/usuario/Templates/registration/login.html
@@ -20,7 +20,7 @@
 <div class="contenedor">
 	<div class="div_info">
 		<p class="explicacion"> ¿Eres timido? <br> ¿Te cuesta relacionarte con personas? <br> 
-		¿Quieres conocer a personas con sus mismos intereses? <br>
+		¿Quieres conocer a personas con tus mismos intereses? <br>
 		Esta pagina te ayudara con todo esto. <br> ¡Vamos, animate! <br>  </p>
 	</div>
 
