--- a/fugax/usuario/Templates/registration/login.html
+++ b/fugax/usuario/Templates/registration/login.html
@@ -27,6 +27,7 @@
 	<div class="div_registro">
 			<h1> Login </h1>
 	<form method="POST">
+	{% csrf_token %}
 	{{ form }}
 	<button type="submit"> Acceder </button>
 	</form>
