--- a/fugax/usuario/Templates/registration/login.html
+++ b/fugax/usuario/Templates/registration/login.html
@@ -28,7 +28,7 @@
 			<h1> Login </h1>
 	<form method="POST">
 	{% csrf_token %}
-	{{ form }}
+	{{ form.as_p }}
 	<button type="submit"> Acceder </button>
 	</form>
 	</div>
