--- a/fugax/perfil/templates/profile.html
+++ b/fugax/perfil/templates/profile.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
+<h1 class="titulo">FUGAX</h1>
 	<h1>Perfil de: {{ perfil.usuario.first_name }} {{perfil.usuario.last_name }}</h1>
 	<img src="{{ perfil.imagen.url }}" alt="">
 
