--- a/fugax/perfil/templates/profile.html
+++ b/fugax/perfil/templates/profile.html
@@ -3,16 +3,18 @@
 <html>
 <head lang="es">
 	<title>perfil</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'styles_profile.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'perfil_styles.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<meta charset="utf-8">
 </head>
 <body>
 <h1 class="titulo">FUGAX</h1>
-	<h1>Perfil de: {{ perfil.usuario.first_name }} {{perfil.usuario.last_name }}</h1>
+<br>
+<br>
 	<img src="{{ perfil.imagen.url }}" alt="">
-
-	<h2>Correo Electronico: {{ perfil.usuario.email }}</h2>
-	
+	<br>
+	<div class="tags"></div>
+	<h2 class="nombre"> {{ perfil.usuario.first_name }} {{perfil.usuario.last_name }}</h2>
+	<h2 class="correo">Correo Electronico: {{ perfil.usuario.email }}</h2>
 </body>
 </html>
